test/official_tests/field/undefined.lox
class Foo {}
var foo = Foo();

foo.bar; // error: {"line":4,"message":"Undefined property 'bar' for class 'Foo'","type":"RuntimeError"}
